# CVRM2022-sust

./: .gitignore  CMakeLists.txt  CVRM2021-sust.cpp  CVRM2021-sust.h  CVRM2022-sust.cpp  CVRM2022-sust.h  SetCamera.cpp  auto_aim.cpp  auto_aim.h  main.cpp  main.h
AutoAim/: AutoAim.cpp  AutoAim.h  AutoAimCV.cpp  AutoAimCV.h
Predict/: KalmanFilter.cpp  KalmanFilter.h  Predict.cpp  Predict.h
ReadJson/: ReadJson.cpp  ReadJson.h
SerialPort/: SerialPort.cpp  SerialPort.h
YoloLayer/: common.hpp  logging.h  yololayer.cu  yololayer.h
camera/: carmera.cpp  carmera.h
data/: CVRM2022-sust.json  auto_aim.json
tools/: Draw3D.py
